Grammar/GrammarParser.java
// Generated from Grammar.g4 by ANTLR 4.7.1

package Grammar;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;

import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GrammarParser extends Parser {
    static {
        RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    public static final int
            T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9,
            T__9 = 10, T__10 = 11, T__11 = 12, T__12 = 13, T__13 = 14, T__14 = 15, T__15 = 16, T__16 = 17,
            T__17 = 18, T__18 = 19, T__19 = 20, T__20 = 21, T__21 = 22, T__22 = 23, T__23 = 24,
            T__24 = 25, T__25 = 26, T__26 = 27, T__27 = 28, T__28 = 29, T__29 = 30, T__30 = 31,
            T__31 = 32, T__32 = 33, T__33 = 34, T__34 = 35, T__35 = 36, T__36 = 37, Alpha = 38,
            Digit = 39, Null = 40, Varchar = 41, WS = 42;
    public static final int
            RULE_program = 0, RULE_command = 1, RULE_open_cmd = 2, RULE_close_cmd = 3,
            RULE_write_cmd = 4, RULE_exit_cmd = 5, RULE_show_cmd = 6, RULE_create_cmd = 7,
            RULE_update_cmd = 8, RULE_insert_cmd = 9, RULE_delete_cmd = 10, RULE_typed_attribute_list = 11,
            RULE_type = 12, RULE_integer = 13, RULE_query = 14, RULE_relation_name = 15,
            RULE_expr = 16, RULE_atomic_expr = 17, RULE_selection = 18, RULE_projection = 19,
            RULE_renaming = 20, RULE_union = 21, RULE_difference = 22, RULE_product = 23,
            RULE_natural_join = 24, RULE_condition = 25, RULE_conjunction = 26, RULE_comparison = 27,
            RULE_attribute_list = 28, RULE_identifier = 29, RULE_op = 30, RULE_operand = 31,
            RULE_attribute_name = 32, RULE_literal = 33;
    public static final String[] ruleNames = {
            "program", "command", "open_cmd", "close_cmd", "write_cmd", "exit_cmd",
            "show_cmd", "create_cmd", "update_cmd", "insert_cmd", "delete_cmd", "typed_attribute_list",
            "type", "integer", "query", "relation_name", "expr", "atomic_expr", "selection",
            "projection", "renaming", "union", "difference", "product", "natural_join",
            "condition", "conjunction", "comparison", "attribute_list", "identifier",
            "op", "operand", "attribute_name", "literal"
    };

    private static final String[] _LITERAL_NAMES = {
            null, "'OPEN'", "'CLOSE'", "'WRITE'", "'EXIT'", "'SHOW'", "'CREATE TABLE'",
            "'('", "')'", "'PRIMARY KEY'", "'UPDATE'", "'SET'", "'='", "','", "'WHERE'",
            "'INSERT INTO'", "'VALUES FROM'", "'VALUES FROM RELATION'", "'DELETE FROM'",
            "'VARCHAR'", "'INTEGER'", "'<-'", "';'", "'select'", "'project'", "'rename'",
            "'+'", "'-'", "'*'", "'&'", "'||'", "'&&'", "'=='", "'!='", "'<'", "'>'",
            "'<='", "'>='"
    };
    private static final String[] _SYMBOLIC_NAMES = {
            null, null, null, null, null, null, null, null, null, null, null, null,
            null, null, null, null, null, null, null, null, null, null, null, null,
            null, null, null, null, null, null, null, null, null, null, null, null,
            null, null, "Alpha", "Digit", "Null", "Varchar", "WS"
    };
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "Grammar.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public GrammarParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    public static class ProgramContext extends ParserRuleContext {
        public List<QueryContext> query() {
            return getRuleContexts(QueryContext.class);
        }

        public QueryContext query(int i) {
            return getRuleContext(QueryContext.class, i);
        }

        public List<CommandContext> command() {
            return getRuleContexts(CommandContext.class);
        }

        public CommandContext command(int i) {
            return getRuleContext(CommandContext.class, i);
        }

        public ProgramContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_program;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof GrammarListener) ((GrammarListener) listener).enterProgram(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof GrammarListener) ((GrammarListener) listener).exitProgram(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof GrammarVisitor) return ((GrammarVisitor<? extends T>) visitor).visitProgram(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ProgramContext program() throws RecognitionException {
        ProgramContext _localctx = new ProgramContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_program);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(72);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__9) | (1L << T__14) | (1L << T__17) | (1L << Alpha))) != 0)) {
                    {
                        setState(70);
                        _errHandler.sync(this);
                        switch (_input.LA(1)) {
                            case Alpha: {
                                setState(68);
                                query();
                            }
                            break;
                            case T__0:
                            case T__1:
                            case T__2:
                            case T__3:
                            case T__4:
                            case T__5:
                            case T__9:
                            case T__14:
                            case T__17: {
                                setState(69);
                                command();
                            }
                            break;
                            default:
                                throw new NoViableAltException(this);
                        }
                    }
                    setState(74);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class CommandContext extends ParserRuleContext {
        public Open_cmdContext open_cmd() {
            return getRuleContext(Open_cmdContext.class, 0);
        }

        public Close_cmdContext close_cmd() {
            return getRuleContext(Close_cmdContext.class, 0);
        }

        public Write_cmdContext write_cmd() {
            return getRuleContext(Write_cmdContext.class, 0);
        }

        public Exit_cmdContext exit_cmd() {
            return getRuleContext(Exit_cmdContext.class, 0);
        }

        public Show_cmdContext show_cmd() {
            return getRuleContext(Show_cmdContext.class, 0);
        }

        public Create_cmdContext create_cmd() {
            return getRuleContext(Create_cmdContext.class, 0);
        }

        public Update_cmdContext update_cmd() {
            return getRuleContext(Update_cmdContext.class, 0);
        }

        public Insert_cmdContext insert_cmd() {
            return getRuleContext(Insert_cmdContext.class, 0);
        }

        public Delete_cmdContext delete_cmd() {
            return getRuleContext(Delete_cmdContext.class, 0);
        }

        public CommandContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_command;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof GrammarListener) ((GrammarListener) listener).enterCommand(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof GrammarListener) ((GrammarListener) listener).exitCommand(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof GrammarVisitor) return ((GrammarVisitor<? extends T>) visitor).visitCommand(this);
            else return visitor.visitChildren(this);
        }
    }

    public final CommandContext command() throws RecognitionException {
        CommandContext _localctx = new CommandContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_command);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(84);
                _errHandler.sync(this);
                switch (_input.LA(1)) {
                    case T__0: {
                        setState(75);
                        open_cmd();
                    }
                    break;
                    case T__1: {
                        setState(76);
                        close_cmd();
                    }
                    break;
                    case T__2: {
                        setState(77);
                        write_cmd();
                    }
                    break;
                    case T__3: {
                        setState(78);
                        exit_cmd();
                    }
                    break;
                    case T__4: {
                        setState(79);
                        show_cmd();
                    }
                    break;
                    case T__5: {
                        setState(80);
                        create_cmd();
                    }
                    break;
                    case T__9: {
                        setState(81);
                        update_cmd();
                    }
                    break;
                    case T__14: {
                        setState(82);
                        insert_cmd();
                    }
                    break;
                    case T__17: {
                        setState(83);
                        delete_cmd();
                    }
                    break;
                    default:
                        throw new NoViableAltException(this);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Open_cmdContext extends ParserRuleContext {
        public Relation_nameContext relation_name() {
            return getRuleContext(Relation_nameContext.class, 0);
        }

        public Open_cmdContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_open_cmd;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof GrammarListener) ((GrammarListener) listener).enterOpen_cmd(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof GrammarListener) ((GrammarListener) listener).exitOpen_cmd(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof GrammarVisitor) return ((GrammarVisitor<? extends T>) visitor).visitOpen_cmd(this);
            else return visitor.visitChildren(this);
        }
    }

    public final Open_cmdContext open_cmd() throws RecognitionException {
        Open_cmdContext _localctx = new Open_cmdContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_open_cmd);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(86);
                match(T__0);
                setState(87);
                relation_name();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Close_cmdContext extends ParserRuleContext {
        public Relation_nameContext relation_name() {
            return getRuleContext(Relation_nameContext.class, 0);
        }

        public Close_cmdContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_close_cmd;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof GrammarListener) ((GrammarListener) listener).enterClose_cmd(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof GrammarListener) ((GrammarListener) listener).exitClose_cmd(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof GrammarVisitor) return ((GrammarVisitor<? extends T>) visitor).visitClose_cmd(this);
            else return visitor.visitChildren(this);
        }
    }

    public final Close_cmdContext close_cmd() throws RecognitionException {
        Close_cmdContext _localctx = new Close_cmdContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_close_cmd);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(89);
                match(T__1);
                setState(90);
                relation_name();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Write_cmdContext extends ParserRuleContext {
        public Relation_nameContext relation_name() {
            return getRuleContext(Relation_nameContext.class, 0);
        }

        public Write_cmdContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_write_cmd;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof GrammarListener) ((GrammarListener) listener).enterWrite_cmd(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof GrammarListener) ((GrammarListener) listener).exitWrite_cmd(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof GrammarVisitor) return ((GrammarVisitor<? extends T>) visitor).visitWrite_cmd(this);
            else return visitor.visitChildren(this);
        }
    }

    public final Write_cmdContext write_cmd() throws RecognitionException {
        Write_cmdContext _localctx = new Write_cmdContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_write_cmd);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(92);
                match(T__2);
                setState(93);
                relation_name();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Exit_cmdContext extends ParserRuleContext {
        public Exit_cmdContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_exit_cmd;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof GrammarListener) ((GrammarListener) listener).enterExit_cmd(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof GrammarListener) ((GrammarListener) listener).exitExit_cmd(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof GrammarVisitor) return ((GrammarVisitor<? extends T>) visitor).visitExit_cmd(this);
            else return visitor.visitChildren(this);
        }
    }

    public final Exit_cmdContext exit_cmd() throws RecognitionException {
        Exit_cmdContext _localctx = new Exit_cmdContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_exit_cmd);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(95);
                match(T__3);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Show_cmdContext extends ParserRuleContext {
        public Atomic_exprContext atomic_expr() {
            return getRuleContext(Atomic_exprContext.class, 0);
        }

        public Show_cmdContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_show_cmd;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof GrammarListener) ((GrammarListener) listener).enterShow_cmd(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof GrammarListener) ((GrammarListener) listener).exitShow_cmd(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof GrammarVisitor) return ((GrammarVisitor<? extends T>) visitor).visitShow_cmd(this);
            else return visitor.visitChildren(this);
        }
    }

    public final Show_cmdContext show_cmd() throws RecognitionException {
        Show_cmdContext _localctx = new Show_cmdContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_show_cmd);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(97);
                match(T__4);
                setState(98);
                atomic_expr();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Create_cmdContext extends ParserRuleContext {
        public Relation_nameContext relation_name() {
            return getRuleContext(Relation_nameContext.class, 0);
        }

        public Typed_attribute_listContext typed_attribute_list() {
            return getRuleContext(Typed_attribute_listContext.class, 0);
        }

        public Attribute_listContext attribute_list() {
            return getRuleContext(Attribute_listContext.class, 0);
        }

        public Create_cmdContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_create_cmd;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof GrammarListener) ((GrammarListener) listener).enterCreate_cmd(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof GrammarListener) ((GrammarListener) listener).exitCreate_cmd(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof GrammarVisitor) return ((GrammarVisitor<? extends T>) visitor).visitCreate_cmd(this);
            else return visitor.visitChildren(this);
        }
    }

    public final Create_cmdContext create_cmd() throws RecognitionException {
        Create_cmdContext _localctx = new Create_cmdContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_create_cmd);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(100);
                match(T__5);
                setState(101);
                relation_name();
                setState(102);
                match(T__6);
                setState(103);
                typed_attribute_list();
                setState(104);
                match(T__7);
                setState(105);
                match(T__8);
                setState(106);
                match(T__6);
                setState(107);
                attribute_list();
                setState(108);
                match(T__7);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Update_cmdContext extends ParserRuleContext {
        public Relation_nameContext relation_name() {
            return getRuleContext(Relation_nameContext.class, 0);
        }

        public List<Attribute_nameContext> attribute_name() {
            return getRuleContexts(Attribute_nameContext.class);
        }

        public Attribute_nameContext attribute_name(int i) {
            return getRuleContext(Attribute_nameContext.class, i);
        }

        public List<LiteralContext> literal() {
            return getRuleContexts(LiteralContext.class);
        }

        public LiteralContext literal(int i) {
            return getRuleContext(LiteralContext.class, i);
        }

        public ConditionContext condition() {
            return getRuleContext(ConditionContext.class, 0);
        }

        public Update_cmdContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_update_cmd;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof GrammarListener) ((GrammarListener) listener).enterUpdate_cmd(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof GrammarListener) ((GrammarListener) listener).exitUpdate_cmd(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof GrammarVisitor) return ((GrammarVisitor<? extends T>) visitor).visitUpdate_cmd(this);
            else return visitor.visitChildren(this);
        }
    }

    public final Update_cmdContext update_cmd() throws RecognitionException {
        Update_cmdContext _localctx = new Update_cmdContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_update_cmd);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(110);
                match(T__9);
                setState(111);
                relation_name();
                setState(112);
                match(T__10);
                setState(113);
                attribute_name();
                setState(114);
                match(T__11);
                setState(115);
                literal();
                setState(123);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__12) {
                    {
                        {
                            setState(116);
                            match(T__12);
                            setState(117);
                            attribute_name();
                            setState(118);
                            match(T__11);
                            setState(119);
                            literal();
                        }
                    }
                    setState(125);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(126);
                match(T__13);
                setState(127);
                condition();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Insert_cmdContext extends ParserRuleContext {
        public Relation_nameContext relation_name() {
            return getRuleContext(Relation_nameContext.class, 0);
        }

        public List<LiteralContext> literal() {
            return getRuleContexts(LiteralContext.class);
        }

        public LiteralContext literal(int i) {
            return getRuleContext(LiteralContext.class, i);
        }

        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        public Insert_cmdContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_insert_cmd;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof GrammarListener) ((GrammarListener) listener).enterInsert_cmd(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof GrammarListener) ((GrammarListener) listener).exitInsert_cmd(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof GrammarVisitor) return ((GrammarVisitor<? extends T>) visitor).visitInsert_cmd(this);
            else return visitor.visitChildren(this);
        }
    }

    public final Insert_cmdContext insert_cmd() throws RecognitionException {
        Insert_cmdContext _localctx = new Insert_cmdContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_insert_cmd);
        int _la;
        try {
            setState(148);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 5, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(129);
                    match(T__14);
                    setState(130);
                    relation_name();
                    setState(131);
                    match(T__15);
                    setState(132);
                    match(T__6);
                    setState(133);
                    literal();
                    setState(138);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    while (_la == T__12) {
                        {
                            {
                                setState(134);
                                match(T__12);
                                setState(135);
                                literal();
                            }
                        }
                        setState(140);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    }
                    setState(141);
                    match(T__7);
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(143);
                    match(T__14);
                    setState(144);
                    relation_name();
                    setState(145);
                    match(T__16);
                    setState(146);
                    expr();
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Delete_cmdContext extends ParserRuleContext {
        public Relation_nameContext relation_name() {
            return getRuleContext(Relation_nameContext.class, 0);
        }

        public ConditionContext condition() {
            return getRuleContext(ConditionContext.class, 0);
        }

        public Delete_cmdContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_delete_cmd;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof GrammarListener) ((GrammarListener) listener).enterDelete_cmd(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof GrammarListener) ((GrammarListener) listener).exitDelete_cmd(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof GrammarVisitor) return ((GrammarVisitor<? extends T>) visitor).visitDelete_cmd(this);
            else return visitor.visitChildren(this);
        }
    }

    public final Delete_cmdContext delete_cmd() throws RecognitionException {
        Delete_cmdContext _localctx = new Delete_cmdContext(_ctx, getState());
        enterRule(_localctx, 20, RULE_delete_cmd);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(150);
                match(T__17);
                setState(151);
                relation_name();
                setState(152);
                match(T__13);
                setState(153);
                condition();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Typed_attribute_listContext extends ParserRuleContext {
        public List<Attribute_nameContext> attribute_name() {
            return getRuleContexts(Attribute_nameContext.class);
        }

        public Attribute_nameContext attribute_name(int i) {
            return getRuleContext(Attribute_nameContext.class, i);
        }

        public List<TypeContext> type() {
            return getRuleContexts(TypeContext.class);
        }

        public TypeContext type(int i) {
            return getRuleContext(TypeContext.class, i);
        }

        public Typed_attribute_listContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_typed_attribute_list;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof GrammarListener) ((GrammarListener) listener).enterTyped_attribute_list(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof GrammarListener) ((GrammarListener) listener).exitTyped_attribute_list(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof GrammarVisitor)
                return ((GrammarVisitor<? extends T>) visitor).visitTyped_attribute_list(this);
            else return visitor.visitChildren(this);
        }
    }

    public final Typed_attribute_listContext typed_attribute_list() throws RecognitionException {
        Typed_attribute_listContext _localctx = new Typed_attribute_listContext(_ctx, getState());
        enterRule(_localctx, 22, RULE_typed_attribute_list);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(155);
                attribute_name();
                setState(156);
                type();
                setState(163);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__12) {
                    {
                        {
                            setState(157);
                            match(T__12);
                            setState(158);
                            attribute_name();
                            setState(159);
                            type();
                        }
                    }
                    setState(165);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class TypeContext extends ParserRuleContext {
        public IntegerContext integer() {
            return getRuleContext(IntegerContext.class, 0);
        }

        public TypeContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_type;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof GrammarListener) ((GrammarListener) listener).enterType(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof GrammarListener) ((GrammarListener) listener).exitType(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof GrammarVisitor) return ((GrammarVisitor<? extends T>) visitor).visitType(this);
            else return visitor.visitChildren(this);
        }
    }

    public final TypeContext type() throws RecognitionException {
        TypeContext _localctx = new TypeContext(_ctx, getState());
        enterRule(_localctx, 24, RULE_type);
        try {
            setState(172);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case T__18:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(166);
                    match(T__18);
                    setState(167);
                    match(T__6);
                    setState(168);
                    integer();
                    setState(169);
                    match(T__7);
                }
                break;
                case T__19:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(171);
                    match(T__19);
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class IntegerContext extends ParserRuleContext {
        public List<TerminalNode> Digit() {
            return getTokens(GrammarParser.Digit);
        }

        public TerminalNode Digit(int i) {
            return getToken(GrammarParser.Digit, i);
        }

        public IntegerContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_integer;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof GrammarListener) ((GrammarListener) listener).enterInteger(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof GrammarListener) ((GrammarListener) listener).exitInteger(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof GrammarVisitor) return ((GrammarVisitor<? extends T>) visitor).visitInteger(this);
            else return visitor.visitChildren(this);
        }
    }
